--- a/Transportation.Presentation.Api/appsettings.json
+++ b/Transportation.Presentation.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "http://localhost:4200",
+  "ConnectionStrings": {
+    "Application": "server=.; Database=EsfahanTransportation; User id=sa; Password=123456; TrustServerCertificate=True",
+    "SSO": "Server=.; Database=PhoenixSSO; user id=sa; password=123456; TrustServerCertificate=True"
+  }
 }
