--- a/Phoenix.SSO/Phoenix.SSO.csproj
+++ b/Phoenix.SSO/Phoenix.SSO.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
     <PackageReference Include="PhoenixFramework.Application" Version="1.3.2" />
     <PackageReference Include="PhoenixFramework.Autofac" Version="1.2.8" />
+    <PackageReference Include="PhoenixFramework.Logging" Version="1.2.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
   </ItemGroup>
   <!--<ItemGroup>
