--- a/Transportation.Presentation.Api/appsettings.json
+++ b/Transportation.Presentation.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigins": "http://localhost:4200",
+  "IdentityAuthorities": ["https://localhost:7001"],
   "ConnectionStrings": {
     "Application": "server=.; Database=EsfahanTransportation; User id=sa; Password=123456; TrustServerCertificate=True",
     "SSO": "Server=.; Database=PhoenixSSO; user id=sa; password=123456; TrustServerCertificate=True"
