--- a/Transportation.Presentation.Api/appsettings.Development.json
+++ b/Transportation.Presentation.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  }, 
+  "AllowedHosts": "*",
+  "AllowedOrigins": ["http://localhost:4200"],
+  "IdentityAuthorities": ["https://localhost:7001"],
+  "ConnectionStrings": {
+    "Application": "server=.; Database=EsfahanTransportation; User id=sa; Password=123456; TrustServerCertificate=True;MultipleActiveResultSets=True",
+    "SSO": "Server=.; Database=PhoenixSSO; user id=sa; password=123456; TrustServerCertificate=True"
   }
 }
