--- a/Transportation.Presentation.Api/appsettings.json
+++ b/Transportation.Presentation.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": "http://localhost:4200",
+  "AllowedOrigins": ["http://localhost:4200"],
   "IdentityAuthorities": ["https://localhost:7001"],
   "ConnectionStrings": {
     "Application": "server=.; Database=EsfahanTransportation; User id=sa; Password=123456; TrustServerCertificate=True",
