--- a/UserManagement.Application/UserManagement.Application.csproj
+++ b/UserManagement.Application/UserManagement.Application.csproj
@@ -13,14 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UserManagement.Application.Contracts\UserManagement.Application.Contracts.csproj" />
-    <ProjectReference Include="..\UserManagement.Persistence\UserManagement.Persistence.csproj" />
-    <ProjectReference Include="..\UserManagement.Query.Contracts\UserManagement.Query.Contracts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="PhoenixFramework.Application" Version="1.3.2" />
-    <PackageReference Include="PhoenixFramework.Identity" Version="1.1.6" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+    <ProjectReference Include="..\UserManagement.Domain\UserManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
